The user-service module is separated from the monolith