@@ -1,20 +1,20 @@
 package ru.practicum.compilation.service;
 
-import ru.practicum.dto.compilation.CompilationDto;
 import ru.practicum.compilation.dal.Compilation;
+import ru.practicum.dto.compilation.CompilationDto;
 import ru.practicum.dto.event.EventShortDto;
+import ru.practicum.dto.user.UserShortDto;
 import ru.practicum.event.service.EventMapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 public class CompilationMapper {
 
-    public static CompilationDto toCompilationDto(Compilation compilation) {
+    public static CompilationDto toCompilationDto(Compilation compilation, Map<Long, UserShortDto> userMap) {
         List<EventShortDto> eventShortDtoList = compilation.getEvents().stream()
-                .map(event ->
-                        EventMapper.toEventShortDto(event, 0L, 0L)
-                ).collect(Collectors.toList());
+                .map(e -> EventMapper.toEventShortDto(e, userMap.get(e.getInitiatorId()), 0L, 0L))
+                .toList();
 
         return CompilationDto.builder()
                 .id(compilation.getId())
@@ -22,12 +22,6 @@ public class CompilationMapper {
                 .title(compilation.getTitle())
                 .events(eventShortDtoList)
                 .build();
-    }
-
-    public static List<CompilationDto> toCompilationDtoList(List<Compilation> compilations) {
-        return compilations.stream()
-                .map(CompilationMapper::toCompilationDto)
-                .collect(Collectors.toList());
     }
 
 }
